--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "eslint": "eslint --ext .js ./src"
+    "eslint": "eslint src/**/*.{js,vue} --fix"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -13,16 +13,22 @@
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
-    "node-sass": "^4.9.2"
+    "node-sass": "^4.9.2",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "vue": "^2.5.17",
+    "vue-template-compiler": "^2.5.17"
   },
   "devDependencies": {
     "css-loader": "^1.0.0",
     "eslint": "^5.2.0",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-vue": "^4.7.1",
     "mini-css-extract-plugin": "^0.4.1",
     "nodemon": "^1.18.3",
     "sass-loader": "^7.1.0",
+    "vue-loader": "^15.2.6",
     "webpack": "^4.16.4",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.22.3"
