Split vue components and change style effects

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
+    "start": "open http://localhost:3000 && nodemon ./bin/www",
     "eslint": "eslint src/**/*.{js,vue} --fix"
   },
   "dependencies": {
