--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-template-compiler": "^2.5.17"
   },
   "devDependencies": {
+    "css-hot-loader": "^1.4.1",
     "css-loader": "^1.0.0",
     "eslint": "^5.2.0",
     "eslint-config-airbnb-base": "^13.0.0",
