--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "open http://localhost:3000 && nodemon ./bin/www",
+    "start": "nodemon ./bin/www",
     "eslint": "eslint src/**/*.{js,vue} --fix"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "node-sass": "^4.9.2",
+    "opn": "^5.3.0",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "vue": "^2.5.17",
