--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "eslint": "eslint src/**/*.{js,vue} --fix"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
@@ -16,6 +18,8 @@
     "node-sass": "^4.9.2",
     "opn": "^5.3.0",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
+    "sequelize": "^4.38.0",
+    "sqlite3": "^4.0.2",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "vue": "^2.5.17",
     "vue-template-compiler": "^2.5.17"
