--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "sqlite3": "^4.0.2",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "vue": "^2.5.17",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.17",
+    "vuejs-datepicker": "^1.5.2"
   },
   "devDependencies": {
     "css-hot-loader": "^1.4.1",
