--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "uglifyjs-webpack-plugin": "^1.2.7",
     "vue": "^2.5.17",
     "vue-template-compiler": "^2.5.17",
-    "vuejs-datepicker": "^1.5.2"
+    "vuejs-datepicker": "^1.5.2",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "css-hot-loader": "^1.4.1",
