--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,7 @@
 {
-  "presets": ["es2017"],
-  "plugins": ["transform-es2015-modules-commonjs"]
+  "presets": ["es2015"],
+  "plugins": [
+    "transform-es2015-modules-commonjs",
+    "transform-es2015-destructuring"
+  ]
 }
