--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "@vue/test-utils": "^1.0.0-beta.24",
     "babel-core": "^6.26.3",
     "babel-jest": "^23.4.2",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "css-hot-loader": "^1.4.1",
     "css-loader": "^1.0.0",
     "eslint": "^5.2.0",
